--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barcode Scanner</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/quagga@0.12.1/dist/quagga.min.js"></script>
-
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="icon" href="assets/media/fav-150x150.jpeg">
+        <title>Doggy Tools</title>
+    </head>
 <body>
+    <nav class="nav">
+        <div class="nLogo">
+          <a href="http://doggy.sodori.se"><img id="DGlogo" src="assets/media/Doggy Grunkor/Doggy Grunkor.ico" alt="Logo of Doggy Grunkor"></a>
+        </div>
+        <div class="destinations">
+            <ul class="menu">
+                <li><a href="https://sodori.se/" data-hover="Valhalla Coding">Valhalla Coding</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1wcwOeazKBiMnwlPfke60ltBxg21Ch5vKce3c1-VKtmk/edit?usp=drive_link" data-hover="To Spreadsheet">Doggy Grunkor<br>Spreadsheet</a></li>
+                <li><a href="#" data-hover="Följesedel">Följesedel</a></li>
+            </ul>
+        </div>
+    </nav>
 
-  <div class="container">
-    <h1>Barcode Scanner</h1>
-    <button id="ScanButton">Scan Barcodes</button>
-    <div id="scanner-container"></div>
-    <div id="error"></div>
-    <div id="result"></div>
-  </div>
-
-  <script src="Assets/JS/Script.js"></script>
 </body>
 </html>
