--- a/index.html
+++ b/index.html
@@ -21,5 +21,25 @@
         </div>
     </nav>
 
+    <div class="pdf 1" style="background-image: url('assets/media/SKR.png'); background-size: contain; background-repeat: no-repeat;">
+        <div class="A SK">
+            A
+        </div>
+        <div class="A R">
+            B
+        </div>
+        <div class="B SK">
+            C
+        </div>
+        <div class="B R">
+            D
+        </div>
+        <div class="C SK">
+            E
+        </div>
+        <div class="C R">
+            F
+        </div>
+    </div>
 </body>
 </html>
