fixing up allignment and layouts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="icon" href="assets/media/fav-150x150.jpeg">
+        <script src="Assets/JS/Script.js"></script>
         <title>Doggy Tools</title>
     </head>
 <body>
@@ -21,25 +22,7 @@
         </div>
     </nav>
 
-    <div class="pdf 1" style="background-image: url('assets/media/SKR.png'); background-size: contain; background-repeat: no-repeat;">
-        <div class="A SK">
-            A
-        </div>
-        <div class="A R">
-            B
-        </div>
-        <div class="B SK">
-            C
-        </div>
-        <div class="B R">
-            D
-        </div>
-        <div class="C SK">
-            E
-        </div>
-        <div class="C R">
-            F
-        </div>
+    <div class="LabelPages">
     </div>
 </body>
 </html>
