--- a/index.html
+++ b/index.html
@@ -22,6 +22,41 @@
         </div>
     </nav>
 
+    <div class="parameters">
+        <input type="text" name="KokNr" id="KokId" required placeholder="Välj vilket KokId att börja på.">
+        <div id="RSelect">
+            <label for="RSelect">Välj vilket R-nummer du vill börja på:</label>
+            <div class="Rid">
+                <input type="radio" name="rButtons" id="0" checked>
+                <label for="0">First 1</label>
+            </div>
+            <div class="Rid">
+                <input type="radio" name="rButtons" id="1">
+                <label for="1">Second 1</label>
+            </div>
+            <div class="Rid">
+                <input type="radio" name="rButtons" id="2">
+                <label for="2">First 3</label>
+            </div>
+            <div class="Rid">
+                <input type="radio" name="rButtons" id="3">
+                <label for="3">Second 3</label>
+            </div>
+            <div class="Rid">
+                <input type="radio" name="rButtons" id="4">
+                <label for="4">First 5</label>
+            </div>
+            <div class="Rid">
+                <input type="radio" name="rButtons" id="5">
+                <label for="5">Second 5</label>
+            </div>
+        </div>
+        <label for="pages">Välj antal sidor:</label>
+        <input type="number" name="pages" id="pages" value="1">
+        <br>
+        <input type="button" id="Print" value="Print">
+    </div>
+
     <div class="LabelPages">
     </div>
 </body>
