--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/CSS/style.css">
         <link rel="icon" href="assets/media/fav-150x150.jpeg">
         <script src="Assets/JS/Script.js"></script>
         <title>Doggy Tools</title>
