Fixed Rvalue bugg

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 
             <br>
             <div class="inputs">
-            <div>
-                <label for="KokNr">Välj KokNr: </label>
-                <input type="text" name="KokNr" id="KokId" required>
-            </div>
+                <div>
+                    <label for="KokNr">Välj KokNr: </label>
+                    <input type="text" name="KokNr" id="KokId" required>
+                </div>
 
-            <br>
-            <div>
-                <label for="pages">Välj antal sidor: </label>
-                <input type="number" name="pages" id="pages" value="1">
-            </div>
+                <br>
+                <div>
+                    <label for="pages">Välj antal sidor: </label>
+                    <input type="number" name="pages" id="pages" value="1">
+                </div>
             </div>
 
             <br>
@@ -82,6 +82,13 @@
                     </div>
                 </div>
             </div>
+<!-- 
+            <br>
+            <div>
+                <label for="Alabel">Include "-A-" pages</label>
+                <input type="checkbox" name="Alabel" id="Alabel">
+                <input type="number" name="Apages" id="Apages" placeholder="Ammount of pages">
+            </div> -->
 
             <br>
             <div class="print">
